<resources>
    <string name="app_name">ZotPlanner</string>
    <string name="main_settings_about_textview">About</string>
    <string name="settings_about_application_information">Developed by UCI students, \ndeveloped for UCI students.</string>
    <string name="settings_about_email_me_for_questions">Email: lyx981mike@gmail.com</string>
    <string name="settings_about_send_email_chooser">Send Email</string>
    <string name="settings_about_email_title">Question About ZotPlanner (Sent Through App)</string>
    <string name="settings_about_email_detail">From Beta Version：</string>
    <string name="settings_about_copyright_information">All rights reserved by IcySakura</string>
    <string name="action_settings">Settings</string>
    <string name="clear_all_selected_courses">Clear All</string>
    <string name="clear_all_map_marks">Clear All Marks</string>
    <string name="success_clear">Cleared!</string>
    <string name="empty_clear">Nothing to clear!</string>
    <string name="quarter_choose">Choose the Quarter here</string>
    <string name="ge_choose">Choose the GE category</string>
    <string name="dept_choose">Choose the Dept here</string>
    <string name="level_choose">Choose the course level</string>
    <string name="welcome_words">Hey there!</string>
    <string name="welcome_button_text">Start</string>
    <string name="select_hint_name_prefix"> chosen: </string>
    <string name="select_hint_name_quarter">Quarter</string>
    <string name="select_hint_name_ge">GE Category</string>
    <string name="select_hint_name_dept">Dept</string>
    <string name="select_hint_name_level">Level</string>
    <string name="course_adapter_choose_specific_course">Choose your course(s)</string>
    <string name="course_list_label">Course List</string>
    <string name="start_choose_course_label">Search For Courses</string>
    <string name="course">Course</string>
    <string name="no_course_to_display">N/A</string>
    <string name="add_the_course">Add</string>
    <string name="remove_single_course">Remove</string>
    <string name="course_dialog_code">Code: %1$s</string>
    <string name="course_dialog_type">Type: %1$s</string>
    <string name="course_dialog_sec">Section: %1$s</string>
    <string name="course_dialog_units">Units: %1$s</string>
    <string name="course_dialog_instructor">Instructor(s): %1$s</string>
    <string name="course_dialog_time">Time: %1$s</string>
    <string name="course_dialog_place">Place: %1$s</string>
    <string name="course_dialog_final">Final: %1$s</string>
    <string name="course_dialog_max">Maximum: %1$s</string>
    <string name="course_dialog_enr">Entrance: %1$s</string>
    <string name="course_dialog_wl">Waitlist: %1$s</string>
    <string name="course_dialog_req">Request: %1$s</string>
    <string name="course_dialog_nor">Nor: %1$s</string>
    <string name="course_dialog_rstr">Restriction(s): %1$s</string>
    <string name="course_dialog_status">Status: %1$s</string>
    <string name="selected_course_list_nothing_text">No course has been added</string>
    <string name="settings_language">Languages</string>
    <string name="current_language_settings">Current Language: %1$s</string>
    <string name="language_settings_dialog_label">Language Settings</string>
    <string name="settings_notification">Notifications</string>
    <string name="current_notification_settings">Check Listening Course Every %1$s minutes</string>
    <string name="notification_settings_time_label">Notification Settings</string>
    <string name="notification_settings_time_interval_label">Interval Settings</string>
    <string name="notification_settings_time_interval_1_min">Check every 1 minute</string>
    <string name="notification_settings_time_interval_3_min">Check every 3 minutes</string>
    <string name="notification_settings_time_interval_5_min">Check every 5 minutes</string>
    <string name="notification_settings_time_interval_10_min">Check every 10 minutes</string>
    <string name="notification_settings_time_interval_15_min">Check every 15 minutes</string>
    <string name="notification_settings_time_interval_30_min">Check every 30 minutes</string>
    <string name="notification_settings_time_interval_1_hr">Check every 1 hour</string>
    <string name="notification_settings_time_interval_2_hrs">Check every 2 hours</string>
    <string name="main_settings_label">Settings</string>
    <string name="default_language">Default (Follow System Language)</string>
    <string name="change_language_to_default">App Language will be changed to Default(Follow System) after relaunch</string>
    <string name="notification_list_label">Set Up Notification</string>
    <string name="clear_all_notification_single_course">Clear Notification List</string>
    <string name="notification_title_for_open_class">One of your watching classes is %1$s!</string>
    <string name="notification_channel_name">Notification_Channel</string>
    <string name="notification_channel_description">This is the notification channel for ZotPlanner.</string>
    <string name="notification_context_for_open_class">%1$s %2$s %3$s is %4$s!</string>
    <string name="notification_big_context_for_open_class">Course Name: %1$s\nCourse Code: %2$s\nCourse Type: %3$s\n Course Section: %4$s\nCourse Instructor: %5$s\nCourse Place:%6$s\nCourse Time: %7$s</string>
    <string name="notification_settings_time_current_status_title">Checking Interval</string>
    <string name="notification_settings_time_current_checking_list_title">Current Checking List</string>
    <string name="notification_settings_time_current_status_options">Notify Me When</string>
    <string name="notification_settings_time_status_option_open">Open</string>
    <string name="notification_settings_time_status_option_Waitl">WaitList</string>
    <string name="notification_settings_time_status_option_NewOnly">NewOnly</string>
    <string name="notification_settings_time_status_option_full">Full</string>
    <string name="notification_settings_time_status_option_cannot_be_empty">Status option cannot be empty, Open has been added automatically!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Navigation drawer</string>
    <string name="nav_header_subtitle">ZotPlanner</string>
    <string name="nav_header_desc">List</string>
    <string name="list_view">List View</string>
    <string name="calendar_view">Calendar View</string>
    <string name="home">Zot Smart</string>
    <string name="settings">Settings</string>
    <string name="donate">Donate</string>
    <string name="others">Others</string>
    <string name="under_development_message">Currently under development, stay tuned!</string>
    <string name="selected_course_list_week_view_go_to">GO TO</string>
    <string name="selected_course_list_week_view_today">Today</string>
    <string name="selected_course_list_week_view_action_day">Day view</string>
    <string name="selected_course_list_week_view_three_day">3 day view</string>
    <string name="selected_course_list_week_view_action_week">Week view</string>
    <string name="summer_class_not_available_for_notification">Sorry, the current class is not able to be watched now!</string>
    <string name="notification_settings_time_keep_notify_me_title">Keep Notify Me</string>
    <string name="notification_settings_time_keep_notify_me_open">We will keep notifying you even we have already sent you a notification of a course</string>
    <string name="notification_settings_time_keep_notify_me_close">There will only be one notification for each course you are watching</string>
    <string name="sorry">Sorry</string>
    <string name="have_to_choose_at_least_two_or_more_options">Please choose at least two options</string>
    <string name="understand">OK!</string>
    <string name="refresh">Refresh</string>
    <string name="edit">Edit</string>
    <string name="comments">Comments: %1$s</string>
    <string name="error_refreshing_singleCourse">An error happened!</string>
    <string name="current_user_profile">Profile %1$s</string>
    <string name="profile_1">Profile 1</string>
    <string name="profile_2">Profile 2</string>
    <string name="profile_3">Profile 3</string>
    <string name="profile_4">Profile 4</string>
    <string name="map_view_selection_of_course">Mark</string>
    <string name="map_view_route_of_two_courses">Route</string>
    <string name="map_view_bottom_sheet_first_course_spinner_title">Choose a course</string>
    <string name="map_view_center">Center</string>
    <string name="map_view_bottom_sheet_second_course_spinner_title">Choose a second course</string>
    <string name="map_view_start_location">Start location: %1$s</string>
    <string name="map_view_end_location">End location: %1$s</string>
    <string name="map_view_distance">Distance: %1$s</string>
    <string name="map_view_duration">Duration:</string>
</resources>
