<?xml version="1.0" encoding="utf-8"?>
<menu
    android:id="@+id/week_view_menu"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity"
    >
    <item android:id="@+id/week_view_action_go_to_one_event"
        android:title="@string/selected_course_list_week_view_go_to"
        android:orderInCategory="100"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior = "none">
                <item android:id="@+id/week_view_action_go_to_today" android:title = "@string/selected_course_list_week_view_today"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/week_view_action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
    <group
        android:checkableBehavior="single">
        <item android:id="@+id/week_view_action_day_view"
            android:title="@string/selected_course_list_week_view_action_day"
            android:orderInCategory="100" />
        <item android:id="@+id/week_view_action_three_day_view"
            android:title="@string/selected_course_list_week_view_three_day"
            android:orderInCategory="100"
            android:checked="true"/>
        <item android:id="@+id/week_view_action_week_view"
            android:title="@string/selected_course_list_week_view_action_week"
            android:orderInCategory="100"/>
    </group>
    <item
        android:id="@+id/week_view_clear_all_notification_single_course"
        android:orderInCategory="100"
        android:title="@string/clear_all_notification_single_course"
        app:showAsAction="never" />
    <item
        android:id="@+id/week_view_clear_all_selected_course"
        android:orderInCategory="100"
        android:title="@string/clear_all_selected_courses"
        app:showAsAction="never" />
</menu>
