<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true">

    <RadioGroup
        android:id="@+id/notification_settings_time_interval_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15sp"
        android:layout_marginStart="20sp"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="10sp"
        >
        <RadioButton
            android:id="@+id/notification_settings_time_interval_1_min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_settings_time_interval_1_min"
            />
        <RadioButton
            android:id="@+id/notification_settings_time_interval_3_mins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_settings_time_interval_3_min"
            />
        <RadioButton
            android:id="@+id/notification_settings_time_interval_5_mins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_settings_time_interval_5_min"
            />
        <RadioButton
            android:id="@+id/notification_settings_time_interval_10_mins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_settings_time_interval_10_min"
            />
        <RadioButton
            android:id="@+id/notification_settings_time_interval_15_mins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_settings_time_interval_15_min"
            />
        <RadioButton
            android:id="@+id/notification_settings_time_interval_30_mins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_settings_time_interval_30_min"
            />
        <RadioButton
            android:id="@+id/notification_settings_time_interval_1_hrs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_settings_time_interval_1_hr"
            />
        <RadioButton
            android:id="@+id/notification_settings_time_interval_2_hrs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_settings_time_interval_2_hrs"
            />
    </RadioGroup>

</LinearLayout>