<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.donkeyandperi.zotplanner.SearchCourseOption">
    <item
        android:id="@+id/menu_main_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/clear_all_notification_single_course"
        android:orderInCategory="100"
        android:title="@string/clear_all_notification_single_course"
        app:showAsAction="never" />
    <item
        android:id="@+id/clear_all_selected_course"
        android:orderInCategory="100"
        android:title="@string/clear_all_selected_courses"
        app:showAsAction="never" />
</menu>
