<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true">

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/notification_settings_time_checkbox_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_settings_time_status_option_open"
        android:textColor="@color/course_status_open_color"
        android:layout_marginEnd="15sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/notification_settings_time_checkbox_waitl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_settings_time_status_option_Waitl"
        android:textColor="@color/course_status_wait_list_color"
        android:layout_marginEnd="15sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/notification_settings_time_checkbox_new_only"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_settings_time_status_option_NewOnly"
        android:textColor="@color/course_status_new_only_color"
        android:layout_marginEnd="15sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/notification_settings_time_checkbox_full"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_settings_time_status_option_full"
        android:textColor="@color/course_status_full_color"
        android:layout_marginEnd="15sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        />

</LinearLayout>