<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/map_view_bottom_sheet_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:behavior_peekHeight="80dp"
    android:background="#E7E7E7"
    app:behavior_hideable="false"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/map_view_bottom_sheet_first_course_spinner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/map_view_bottom_sheet_first_course_spinner_title"
        />
    <org.angmarch.views.NiceSpinner
        android:id="@+id/map_view_bottom_sheet_first_course_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/map_view_bottom_sheet_first_course_spinner_title"
        />

    <TextView
        android:id="@+id/map_view_bottom_sheet_second_course_spinner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/map_view_bottom_sheet_first_course_spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/map_view_bottom_sheet_second_course_spinner_title"
        />
    <org.angmarch.views.NiceSpinner
        android:id="@+id/map_view_bottom_sheet_second_course_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/map_view_bottom_sheet_second_course_spinner_title"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/map_view_bottom_sheet_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/map_view_bottom_sheet_second_course_spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/map_view_bottom_sheet_start_location_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintTop_toTopOf="@+id/map_view_bottom_sheet_info_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/map_view_start_location"
            />
        <TextView
            android:id="@+id/map_view_bottom_sheet_end_location_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintTop_toBottomOf="@+id/map_view_bottom_sheet_start_location_textView"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/map_view_end_location"
            />
        <TextView
            android:id="@+id/map_view_bottom_sheet_distance_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintTop_toBottomOf="@+id/map_view_bottom_sheet_end_location_textView"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/map_view_distance"
            />
        <TextView
            android:id="@+id/map_view_bottom_sheet_duration_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/map_view_bottom_sheet_distance_textView"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/map_view_duration"
            />
        <TextView
            android:id="@+id/map_view_bottom_sheet_duration_value_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/map_view_bottom_sheet_duration_title_textView"
            app:layout_constraintLeft_toRightOf="@+id/map_view_bottom_sheet_duration_title_textView"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>