<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/about_settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:paddingTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/about_settings_information_icon"
                android:layout_width="120sp"
                android:layout_height="120sp"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/anteater_icon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_about_application_information"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/about_settings_information_version"
                android:paddingTop="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/about_settings_email_us_for_question"
                android:paddingTop="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_about_email_me_for_questions"
                android:textAlignment="center"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingBottom="10sp"
                android:text="@string/settings_about_copyright_information"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>